traces/bug_895.txt
src/fflib/problem.cpp:3996: error: DEAD_STORE
  The value written to &nnv (type long) is never used.
Showing all 1 steps of the trace


src/fflib/problem.cpp:3996:2: Write of unused value
3994.   	long npi;
3995.   	long i,nv=Kv.NbDoF(),N=Kv.N;
3996.   	long nnv=KKv.NbDoF();
         ^
3997.   	assert(nv==nnv);
3998.   	//  bool show = Kv.Vh.Th(T)==0;
